// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render snapShot 1`] = `
<div>
  <hr />
  <h2>
    nothing much
  </h2>
  <h1>
    This is my counter App
  </h1>
  <h2>
    Count: 
    0
  </h2>
  <button
    className="btn"
    onClick={[Function]}
  >
    1
    +
  </button>
  <button
    className="btn"
    onClick={[Function]}
  >
    10
    +
  </button>
  <button
    className="btn"
    onClick={[Function]}
  >
    100
    +
  </button>
  <button
    className="btn"
    onClick={[Function]}
  >
    1000
    +
  </button>
  <div>
    <button
      className="btn"
      onClick={[Function]}
    >
      Clear counter
    </button>
  </div>
  <div>
    <h2>
      Todo List:
    </h2>
    <ul>
      <li>
        Read the quran
      </li>
    </ul>
    <form
      data-testid="form"
      onSubmit={[Function]}
    >
      <label
        htmlFor="message"
      >
        Enter some message
      </label>
      <input
        data-testid="message"
        id="message"
        onChange={[Function]}
        placeholder="Enter a todo"
        type="text"
        value=""
      />
    </form>
  </div>
</div>
`;

exports[`Todo: should render Todo snapshot 1 1`] = `
<div>
  <h2>
    Todo List:
  </h2>
  <ul>
    <li>
      code!!
    </li>
  </ul>
  <form
    data-testid="form"
    onSubmit={[Function]}
  >
    <label
      htmlFor="message"
    >
      Enter some message
    </label>
    <input
      data-testid="message"
      id="message"
      onChange={[Function]}
      placeholder="Enter a todo"
      type="text"
      value=""
    />
  </form>
</div>
`;

exports[`Todo: should render Todo snapshot 2 1`] = `
<div>
  <h2>
    Todo List:
  </h2>
  <ul>
    <li>
      fake and mock all
    </li>
  </ul>
  <form
    data-testid="form"
    onSubmit={[Function]}
  >
    <label
      htmlFor="message"
    >
      Enter some message
    </label>
    <input
      data-testid="message"
      id="message"
      onChange={[Function]}
      placeholder="Enter a todo"
      type="text"
      value=""
    />
  </form>
</div>
`;
